--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                         <span class="text-avatar">A</span> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="./user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="./user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="./user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -72,15 +72,15 @@
                             <span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./user/user_info.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>基本资料</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./user/user_avatar.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>更换头像</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./user/user_pwd.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>重置密码</a>
                             </dd>
                         </dl>
